--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina para pesquisar usuarios do Github">
+    <meta name="author" content="Josue Ocanha Costa">
+    <meta name="keywords" content="API, javascript, html, fetch, css">
     <title>GitHub API - buscando usuários com fetch</title>
 
     <link rel="stylesheet" href="src/css/reset.css">
