--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <input type="button" value="Buscar" id="btn-search">
             </header>
 
-            <div class="profile-data"></div>
+            <div class="profile-data">
+               
+            </div>
         </section>
     </main>
 
